Fjerner duplisering av maven-surefire-plugin i pom.